@@ -3,6 +3,7 @@ stylesheet="ledgersmb.css"
 include_stylesheet=["UI/setup/stylesheet.css"] ?>
 <?lsmb PROCESS elements.html ?>
 <body>
+<h2><?lsmb text('Database Management Console') ?></h2>
 <div class="listtop"><?lsmb text('Enter User') ?></div>
 <form action="setup.pl" method="POST" name="new_user">
 <?lsmb INCLUDE input element_data = {
